--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -19,12 +19,11 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #aa6ccb;
+  --ifm-color-primary-dark: #9d55c3;
+  --ifm-color-primary-darker: #964abf;
+  --ifm-color-primary-darkest: #7d39a1;
+  --ifm-color-primary-light: #b783d3;
+  --ifm-color-primary-lighter: #be8ed7;
+  --ifm-color-primary-lightest: #d2b1e3;
 }
